--- a/src/Components/Pages/Map/MapPage.css
+++ b/src/Components/Pages/Map/MapPage.css
@@ -1,8 +1,15 @@
 .map {
-    background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .map-container {
-    display:flex;
-    height: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 15% 85%;
+  grid-template-rows: 100%;
+}
+
+.side {
+  width: 300px;
+  float: left;
 }
