--- a/src/Components/Layout/Footer/Footer.css
+++ b/src/Components/Layout/Footer/Footer.css
@@ -1,7 +1,5 @@
-.footer {
-  display: flex;
+#footer {
   background: #00022e;
-  height: 50px;
   align-items: center;
   justify-content: center;
   color: #fc86aa;
