--- a/src/Components/Pages/Map/MapPage.css
+++ b/src/Components/Pages/Map/MapPage.css
@@ -7,12 +7,14 @@
   display: grid;
   grid-template-columns: 15% 85%;
   grid-template-rows: 100%;
+  grid-template-areas: 'side map';
 }
 
 .side {
   background-color: rgba(158, 42, 42, 0.5);
+  grid-area: side;
 }
 
-.column {
-  width: fit-content;
+.map {
+  grid-area: map;
 }
