--- a/src/Components/Layout/Footer/Footer.css
+++ b/src/Components/Layout/Footer/Footer.css
@@ -1,10 +1,10 @@
 #footer {
-  background: #00022e;
-  align-items: center;
-  justify-content: center;
-  color: #fc86aa;
+    background: var(--background-color);
+    align-items: center;
+    justify-content: center;
+    color: var(--text-color);
 }
 
 #experience-bar {
-  height: 5px;
+    height: 5px;
 }
