--- a/src/Components/Pages/Map/MapPage.css
+++ b/src/Components/Pages/Map/MapPage.css
@@ -41,7 +41,7 @@
 .tabs {
     display: flex;
     justify-content: space-around;
-    background-color: #f1f1f1;
+    background-color: var(--background-color);
     padding: 10px;
     border-bottom: 1px solid #ccc;
 }
@@ -53,7 +53,7 @@
 }
 
 .tab.active {
-    border-bottom: 2px solid #000;
+    border-bottom: 2px solid var(--text-color);
 }
 
 .tab-content {
